logs/query_engine_syntax_error.txt
  File "<string>", line 17
    print(f'  title: {entity[\
          ^
SyntaxError: unterminated string literal (detected at line 17)
